# nocode-bot

./: .env.dev  .env.example  .env.local  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml
bot_service/: Dockerfile  create_fastapi_app.py  main.py  pyproject.toml  start.sh
bot_service/core/: configs.py
bot_service/db/: db_utils.py
bot_service/migrations/: env.py
bot_service/models/: __init__.py  bot.py  chain.py  main_menu.py  mixin.py
bot_service/repositories/: async_data_repository.py  async_pg_repository.py  message_broker_repository.py  telegram_api_repository.py  telegram_bot_repository.py
bot_service/schemas/: bot.py  chain.py  chain_button.py  chain_step.py  main_menu.py
bot_service/services/: bot_service.py  chain_button_service.py  chain_handler_service.py  chain_service.py  chain_step_service.py  document_service.py  mailing_service.py  main_menu_service.py  telegram_bot_service.py  webhook_service.py
bot_service/tests/: conftest.py  pytest.ini
bot_service/utils/: bot.py  webhook.py
bot_service/workers/: mailing_worker.py  worker.py
src/: Dockerfile  alembic.ini  bot_handlers.py  create_fastapi_app.py  gunicorn.py  main.py  pyproject.toml  start.sh
src/core/: configs.py
src/db/: db_utils.py
src/migrations/: env.py
src/models/: bot.py
src/repositories/: async_data_repository.py  async_pg_repository.py
src/schemas/: bot.py  document.py
src/services/: document_service.py
src/utils/: create_indices.py  indices.py  webhook.py
user_service/: Dockerfile  manage.py  pyproject.toml  start.sh
user_service/bot_management/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
user_service/bots/: forms.py  models.py  services.py  urls.py  utils.py  views.py
user_service/bots_chain/: apps.py  forms.py  services.py  types.py  urls.py  utils.py  views.py
(+169 files in other folders)
