[tool.poetry]
name = "bot-constructor"
version = "0.1.0"
description = ""
authors = ["Artem Vol <artemvol1998@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
python-telegram-bot = "^21.10"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.0"
orjson = "^3.10.15"
sqlalchemy = "^2.0.38"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
pre-commit = "^4.1.0"
black = "^25.1.0"
isort = "^6.0.0"
flake8 = "^7.1.2"
mypy = "^1.15.0"
requests = "^2.32.3"
gunicorn = "^23.0.0"
aio-pika = "^9.5.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
anyio = "^4.9.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
