[tool.poetry]
name = "user-backend"
version = "0.1.0"
description = ""
authors = ["Artem Vol <artemvol1998@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
python-dotenv = "^1.0.1"
pre-commit = "^4.1.0"
mypy = "^1.15.0"
flake8 = "^7.1.2"
isort = "^6.0.0"
black = "^25.1.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
